<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFECB3"
    tools:context="com.example.shyam.sherlock.EpisodesListBottomSheet">

    <RelativeLayout
        android:id="@+id/bottomHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#607D8B"
        >

        <ImageView
            android:id="@+id/bottomImageView"
            android:layout_height="270dp"
            android:layout_width="180dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:padding="3dp"
            android:background="#FFECB3"
            android:src="@drawable/sherlock_poster"
            android:scaleType="centerCrop"
            android:elevation="2dp"
            android:cropToPadding="true"
            />

        <ImageView
            android:id="@+id/bottomDateSign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/date"
            android:layout_toRightOf="@+id/bottomImageView"
            android:layout_toEndOf="@+id/bottomImageView"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="43dp"/>

        <TextView
            android:id="@+id/bottomQuote"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="italic"
            android:text="@string/season_quote"
            android:padding="8dp"
            android:layout_marginTop="32dp"
            android:textAlignment="center"
            android:textColor="#FFECB3"
            android:layout_toRightOf="@+id/bottomImageView"
            android:layout_toEndOf="@+id/bottomImageView"
            android:layout_below="@+id/bottomAirDate"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/bottomSpeaker"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/season_quote_speaker"
            android:layout_toRightOf="@+id/bottomImageView"
            android:layout_toEndOf="@+id/bottomImageView"
            android:layout_below="@+id/bottomQuote"
            android:padding="8dp"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="#FFE082"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/bottomAirDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/season_release_date"
            android:layout_marginLeft="16dp"
            android:textColor="#FFECB3"
            android:textSize="16sp"
            android:layout_marginTop="40dp"
            android:layout_toRightOf="@+id/bottomDateSign"
            android:layout_toEndOf="@+id/bottomDateSign"
            android:layout_marginStart="8dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <TextView
        android:id="@+id/bottomOverview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bottomHeader"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        android:text="@string/season_episodes_heading"
        android:textSize="24sp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:textColor="#263238"
        />

    <ListView
        android:id="@+id/bottomListView"
        android:layout_below="@+id/bottomOverview"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>

</RelativeLayout>
