<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:fillViewport="true"
    android:background="#607D8B"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.shyam.sherlock.EpisodeDescription">

        <ImageView
            android:id="@+id/episodeDescriptionImage"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:src="@drawable/sherlock_poster"
            android:scaleType="centerCrop"
            android:elevation="4dp"/>

        <RelativeLayout
            android:id="@+id/episodeDescriptionNameFormat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/episodeDescriptionImage"
            android:background="#FFECB3"
            android:elevation="2dp">

            <TextView
                android:id="@+id/episodeDescriptionName"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/episode_name"
                android:textStyle="bold|italic"
                android:textSize="20sp"
                android:textColor="#212121"/>

        </RelativeLayout>

       <android.support.v7.widget.CardView
           android:id="@+id/episodeDescriptionTimes"
           android:orientation="vertical"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="32dp"
           android:layout_marginStart="32dp"
           android:layout_marginTop="24dp"
           android:layout_gravity="center"
           android:layout_below="@+id/episodeDescriptionNameFormat"
           android:elevation="4dp"
           app:cardCornerRadius="6dp"
           app:cardBackgroundColor="#FFECB3"
           android:foreground="?attr/selectableItemBackground">

           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent">

               <ImageView
                   android:id="@+id/episodeDescriptionDateIcon"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/date_grey"
                   android:layout_marginTop="3dp"
                   android:padding="8dp"
                   />

               <TextView
                   android:id="@+id/episodeDescriptionAirDate"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_toRightOf="@+id/episodeDescriptionDateIcon"
                   android:layout_toEndOf="@+id/episodeDescriptionDateIcon"
                   android:layout_alignBottom="@+id/episodeDescriptionDateIcon"
                   android:layout_marginLeft="-8dp"
                   android:layout_marginStart="-8dp"
                   android:text="@string/episode_release_date"
                   android:padding="8dp"
                   android:textColor="#212121"
                   android:textAlignment="center"
                   android:textStyle="normal"/>

               <ImageView
                   android:id="@+id/episodeDescriptionTimeIcon"
                   android:layout_below="@+id/episodeDescriptionDateIcon"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="3dp"
                   android:padding="8dp"
                   android:src="@drawable/time"/>

               <TextView
                   android:id="@+id/episodeDescriptionDuration"
                   android:layout_below="@+id/episodeDescriptionAirDate"
                   android:layout_toRightOf="@+id/episodeDescriptionTimeIcon"
                   android:layout_toEndOf="@+id/episodeDescriptionTimeIcon"
                   android:layout_alignBottom="@+id/episodeDescriptionTimeIcon"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="-8dp"
                   android:layout_marginStart="-8dp"
                   android:text="@string/episode_duration"
                   android:padding="8dp"
                   android:textColor="#212121"
                   android:textAlignment="center"
                   android:textStyle="normal"
                   />

           </RelativeLayout>

       </android.support.v7.widget.CardView>

       <android.support.v7.widget.CardView
           android:id="@+id/episodeDescriptionRatingsCard"
           android:orientation="vertical"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginRight="32dp"
           android:layout_marginEnd="32dp"
           android:layout_marginTop="32dp"
           android:layout_gravity="center"
           android:layout_below="@+id/episodeDescriptionNameFormat"
           android:layout_alignParentRight="true"
           android:layout_alignParentEnd="true"
           android:elevation="4dp"
           app:cardCornerRadius="6dp"
           app:cardBackgroundColor="#FFECB3"
           android:foreground="?attr/selectableItemBackground">

           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent">

               <TextView
                   android:id="@+id/episodeDescriptionRatingsHeading"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_below="@+id/episodeDescriptionRatingStars"
                   android:text="@string/episode_viewers_ratings_heading"
                   android:textSize="12sp"
                   android:padding="8dp"
                   android:layout_marginLeft="8dp"
                   android:layout_marginStart="8dp"
                   android:textColor="#212121"
                   android:textAlignment="center"
                   android:textStyle="normal"
                   />

               <TextView
                   android:id="@+id/episodeDescriptionRatings"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/_5_stars"
                   android:layout_marginTop = "8dp"
                   android:layout_marginLeft="8dp"
                   android:layout_marginStart="8dp"
                   android:textColor="#212121"
                   android:textAlignment="center"
                   android:textStyle="normal"
                   android:textSize="16sp"
                   />

               <RatingBar
                   android:id="@+id/episodeDescriptionRatingStars"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_alignTop="@+id/episodeDescriptionRatings"
                   android:layout_toRightOf="@+id/episodeDescriptionRatings"
                   android:layout_toEndOf="@+id/episodeDescriptionRatings"
                   style="?android:attr/ratingBarStyleSmall"
                   android:numStars="5"
                   android:stepSize="0.01"
                   android:rating="4"
                   android:scaleX=".7"
                   android:scaleY=".7"
                   />

           </RelativeLayout>

       </android.support.v7.widget.CardView>

       <android.support.v7.widget.CardView
           android:orientation="vertical"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="24dp"
           android:layout_marginLeft="16dp"
           android:layout_marginRight="16dp"
           android:layout_marginBottom="24dp"
           android:layout_gravity="center"
           android:layout_below="@+id/episodeDescriptionTimes"
           android:layout_centerHorizontal="true"
           android:elevation="4dp"
           app:cardCornerRadius="6dp"
           app:cardBackgroundColor="#FFECB3"
           android:foreground="?attr/selectableItemBackground">

           <TextView
               android:id="@+id/episodeDescriptionOverview"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/episode_overview"
               android:padding="12dp"
               android:textColor="#212121"
               android:textAlignment="center"
               android:textStyle="italic"/>

       </android.support.v7.widget.CardView>

    </RelativeLayout>

</ScrollView>